[gd_scene load_steps=3 format=3 uid="uid://bwsyqt1kvi56g"]

[ext_resource type="Script" path="res://Scripts/PauseMenu.gd" id="1_i8pcx"]
[ext_resource type="AudioStream" uid="uid://cx8trihirhvyy" path="res://Sounds/UI/pressbutton.ogg" id="2_g5o4k"]

[node name="PauseMenu" type="Control" node_paths=PackedStringArray("soundSlider", "soundPlayer", "buttonSoundPlayer", "musicSlider")]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i8pcx")
soundSlider = NodePath("VBoxContainer/soundSlider")
soundPlayer = NodePath("AudioStreamPlayer")
buttonSoundPlayer = NodePath("buttonSounds")
musicSlider = NodePath("VBoxContainer/musicSlider")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 520.0
offset_top = 100.0
offset_right = 760.0
offset_bottom = 140.0
theme_override_constants/separation = 10

[node name="Music" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Music:"

[node name="musicSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Sounds" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Sounds
"

[node name="soundSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Title" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back To Title"

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume Game"

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "
INSTRUCTIONS:  ▷ Right
(Arrow keys)        ◁ Left
                               △ Jump
                               ▽ Stop"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Sounds"

[node name="buttonSounds" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_g5o4k")
bus = &"Sounds"

[connection signal="value_changed" from="VBoxContainer/musicSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/soundSlider" to="." method="_on_sound_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/Title" to="." method="_on_title_pressed"]
[connection signal="pressed" from="VBoxContainer/Resume" to="." method="togglePauseFall"]
